all pages are corrected and formated

--- a/mainfile.tex
+++ b/mainfile.tex
@@ -42,6 +42,7 @@
 \newpage
 \input tex-for-print/anubandha-2.tex
 \input tex-for-print/anubandha-3.tex
+\input tex-for-print/anubandha-4.tex
 
 \newpage
 \input jss-anukramanike1
