--- a/tex-for-print/anubandha-4.tex
+++ b/tex-for-print/anubandha-4.tex
@@ -105,9 +105,9 @@
 86. & shakitxvishiSATxdevxYta tatatxvXtarxya vimasheR\newline (kananxDAnuvAda) &-& DA. si. shivakumArasAvxmi, rAjayx patArxgAra ilAKe, (kanARTaka sakARra), beMgaLUru, 2009\\
 87. & shivatatatxvXratAnxkara\newline (keLadi basava BUpAla) &-& pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, BAga-1 (1964), BAga-2 (1969), BAga-3 (1975)\\
 %96. & shivatatatxvXratAnxkara\newline (kananxDAnuvAda sahita) &-& (saM) porx. malelxVpurA ji. veMkaTeVshf, kananxDa vishavxvidAyxlaya, haMpi, 1999\\
-88. & shivayoVga parxdiVpikA (\hbox{cenanxsadAshiva\-yoVgi})\newline (kananxDA TiVkA sahita) &-& TiVkAkAra, basavArAdhayx, kananxDa adhayxyana piVTha, kanARTaka vishavxvidAyxlaya, dhAravADa, 1976\\
+88. & shivayoVga parxdiVpikA\newline (\hbox{cenanxsadAshiva\-yoVgi})\newline (kananxDA TiVkA sahita) &-& TiVkAkAra, basavArAdhayx, kananxDa adhayxyana piVTha, kanARTaka vishavxvidAyxlaya, dhAravADa, 1976\\
 89. & shivAdevxYtamaMjariV \hbox{(savxparxBAnaMda shivAcAyaR)}\newline (kananxDa vAyxKAyxnasahita) &-& shirxV rAmAnuja ayayxMgArf, paMcAcAyaR perxsf, meYsUru, 1929\\
-90. & shivAdhikayxshiKAmaNi (soVsale \hbox{reVvaNArAdhayx}) &-& (saM) shirxV soVmasheVKara sAvxmi, namaHshivAya maTha, meYsUru, 1929\\
+90. & shivAdhikayxshiKAmaNi\newline (soVsale \hbox{reVvaNArAdhayx}) &-& (saM) shirxV soVmasheVKara sAvxmi, namaHshivAya maTha, meYsUru, 1929\\
 91. & shivAgamaswraBa (kananxDa) &-& (saM) vidAvxnf eM.ji. naMjuMDArAdhayx, shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru, 1985\\
 %101. & shivAnuBavashabadxkoVsha (kananxDa) &-& Pa.gu. haLakaTiTx, samAja pusatxkAlaya, dhAravADa, 1962\\
 92. & sheYvadashaRna itihAsa matutx tatatxvXparxkAsha\newline (BoVjarAja viracita) &-& (saM) vidAvxnf eM.ji. naMjuMDArAdhayx, parxboVdha garxMthamAlA, meYsUru, 1974\\
@@ -131,7 +131,7 @@
 \end{longtable}}
 
 
-\vskip 1.2cm
+\newpage
 
 \begin{center}
 {\large\bf (2) vacanagarxMthagaLa saMkiSxpatx sUci}
@@ -141,7 +141,7 @@
 
 \centerline{\bf a}
 
-\smallskip
+\medskip
 
 {\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
@@ -173,9 +173,7 @@
 %17. & ashavxtha - savasaM & ashavxtha rAma vacanagaLu & samagarx saMpuTa - 9 & --\\
 \hline
 \end{longtable}}
-
-
-\newpage
+\bigskip
 
 \centerline{\bf A}
 
@@ -227,8 +225,11 @@
 %27. & IshavxriV - savasaM & ?????????????? & samagarx saMpuTa - ???? & kananxDa pusatxka pArxdhikAra\\
 %\hline
 %\end{longtable}}
+\bigskip
 
 \centerline{\bf u}
+
+\medskip
 
 {\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
@@ -247,9 +248,11 @@
 28. &  uLimeV - savasaM & uLiyumeVshavxra cikakxNaNxgaLa vacanagaLu & samagarx saMpuTa - 6  & --\\
 \hline
 \end{longtable}}
+\bigskip
 
 \centerline{\bf e}
 
+\medskip
 {\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
 \hline
@@ -264,9 +267,11 @@
 31. &  elegA - savasaM &  elegAra kAmaNaNxgaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
 \hline
 \end{longtable}}
+\bigskip
 
 \centerline{\bf E}
 
+\medskip
 {\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
 \hline
@@ -280,10 +285,11 @@
 33. &  EleVshavx - savasaM &  EleVshavxra keVtayayxgaLa vacanagaLu & samagarx saMpuTa - 6 & --\\
 \hline
 \end{longtable}}
-
-\newpage
+\bigskip
 
 \centerline{\bf o}
+
+\medskip
 
 {\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
@@ -298,9 +304,8 @@
 \hline
 \end{longtable}}
 
-\medskip
-
 \centerline{\bf ka}
+\smallskip
 
 {\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
@@ -333,10 +338,10 @@
 47. &  koVlashAM - savasaM & koVla shAMtayayxna vacanagaLu & samagarx saMpuTa - 7 & --\\
 \hline
 \end{longtable}}
-
 \medskip
 
 \centerline{\bf ga}
+\medskip
 
 {\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
@@ -385,7 +390,7 @@
 
 \centerline{\bf ca}
 
-{\renewcommand{\arraystretch}{1.32}
+{\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
 \hline
 \endfirsthead
@@ -408,7 +413,7 @@
 
 \centerline{\bf da}
 
-{\renewcommand{\arraystretch}{1.32}
+{\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
 \hline
 \endfirsthead
@@ -428,7 +433,7 @@
 
 \centerline{\bf na}
 
-{\renewcommand{\arraystretch}{1.32}
+{\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
 \hline
 \endfirsthead
@@ -444,6 +449,7 @@
 77. & nuliya  - savasaM & nuliya caMdayayxna vacanagaLu & samagarx saMpuTa - 5 & --\\
 \hline
 \end{longtable}}
+\smallskip
 
 \centerline{\bf pa}
 
@@ -487,7 +493,6 @@
 90. & BoVgaNaNx - savasaM & BoVgaNaNxna vacanagaLu & samagarx saMpuTa - 8 & --\\
 \hline
 \end{longtable}}
-
 \smallskip
 
 \centerline{\bf ma}
@@ -519,8 +524,7 @@
 106. & moVLima - savasaM & moVLige mahAdeVviya vacanagaLu & samagarx saMpuTa - 5 & --\\
 \hline
 \end{longtable}}
-
-\medskip
+\smallskip
 
 \centerline{\bf ra}
 
@@ -534,7 +538,8 @@
 \endfoot
 \endlastfoot
 107. & rakakxsa - savasaM & rakakxsabomimx taMdegaLa vacanagaLu &  samagarx saMpuTa - 9 & kananxDa pusatxka pArxdhikAra\\
-108. & rAyasa - savasaM &  rAyasada maMjaNaNxna vacanagaLu & samagarx saMpuTa - 9 & --
+108. & rAyasa - savasaM &  rAyasada maMjaNaNxna vacanagaLu & samagarx saMpuTa - 9 & --\\
+\hline
 \end{longtable}}
 
 \medskip
@@ -550,10 +555,10 @@
 \hline
 \endfoot
 \endlastfoot
-109. &  ladedxsoV - savasaM &  ladedxya soVmayayxgaLa vacanagaLu & samagarx saMpuTa - 9 & --
+109. &  ladedxsoV - savasaM &  ladedxya soVmayayxgaLa vacanagaLu & samagarx saMpuTa - 9 & --\\
+\hline
 \end{longtable}}
-
-\medskip
+\smallskip
 
 \centerline{\bf va}
 
@@ -572,10 +577,10 @@
 113. & viVrashaM - savasaM &  viVra shaMkaradAsayayxgaLa vacanagaLu & samagarx saMpuTa - 9 & --\\
 114. & viVrasaM - savasaM & sidAdhxMta viVrasaMgayayxna vacanagaLu & samagarx saMpuTa - 9 & --\\
 115. & veVdasaM - savasaM &  veVdamUtiR saMgaNaNxna vacanagaLu & samagarx saMpuTa - 9 & --\\
-116. & veYdayxsaM - savasaM &  veYdayx saMgaNaNxna vacanagaLu & samagarx saMpuTa - 9 & --
+116. & veYdayxsaM - savasaM &  veYdayx saMgaNaNxna vacanagaLu & samagarx saMpuTa - 9 & --\\
+\hline
 \end{longtable}}
-
-\medskip
+\smallskip
 
 \centerline{\bf sha}
 
@@ -590,9 +595,10 @@
 \endlastfoot
 117. & shaMkara - savasaM &  shaMkara dAsimayayxna vacanagaLu & samagarx saMpuTa - 9 & --\\
 118. & shivaleM - savasaM &  shivaleMka maMcaNaNxna vacanagaLu & samagarx saMpuTa - 9 & --\\
-119. & shAMtaviV - savasaM & shAMtaviVreVshavxrana vacanagaLu & samagarx saMpuTa - 9 & --
+119. & shAMtaviV - savasaM & shAMtaviVreVshavxrana vacanagaLu & samagarx saMpuTa - 9 & --\\
+\hline
 \end{longtable}}
-\medskip
+\smallskip
 
 \centerline{\bf sa}
 
@@ -613,13 +619,15 @@
 125. & savxtaMtarx - savasaM &  savxtaMtarx sidadhxliMgeVshavxrara vacanagaLu & samagarx saMpuTa - 11 & --\\
 126. & sidadhxrA - savasaM & sidadhxrAmeVshavxrara vacanagaLu & samagarx saMpuTa - 4 & --\\
 127. & suMkabaM - savasaM & suMkada baMkaNaNxna vacanagaLu & samagarx saMpuTa - 9 & --\\
-128. & soDaDxLa - savasaM &  soDaDxLa bAcarasana vacanagaLu & samagarx saMpuTa - 9 & --
+128. & soDaDxLa - savasaM &  soDaDxLa bAcarasana vacanagaLu & samagarx saMpuTa - 9 & --\\
+\hline
 \end{longtable}}
-\medskip
+\smallskip
 
 \centerline{\bf ha}
 
-{\renewcommand{\arraystretch}{1.3}
+\smallskip
+{\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
 \hline
 \endfirsthead
@@ -652,14 +660,14 @@
 \hline
 \end{longtable}}
 
-\vskip 1cm
+\newpage
 
 \begin{center}
 {\large\bf (3) viVrasheYva kAvayxgaLa saMkiSxpatx sUci}
 \end{center}
 
-{\renewcommand{\arraystretch}{1.35}
-\begin{longtable}{l>{\raggedright}p{5cm}l}
+{\renewcommand{\arraystretch}{1.5}
+\begin{longtable}{l>{\raggedright}p{7cm}l}
 \hline
 \multicolumn{1}{c}{\bf saMkiSxpAtxkaSxra} & \multicolumn{1}{c}{\bf kaqtiya hesaru} & \multicolumn{1}{c}{\bf koTiTxruva saMKeyx}\\
 \hline
@@ -677,7 +685,7 @@ karaNa & karaNa hasige & puTa, sAlu,\\
 keYvapa & keYvalayxpadadhxti &  kiVtaRne, padayx, puTa\\
 keYvasha & keYvalayxsoVpAnanAmeYkoVtatxra shatasathxla & puTa, padayx\\
 gaNaBA & gaNaBASitaratanxmAle & puTa, sAlu\\
-cananxba. ka. & cananxbasavaNaNxnavara vacanagaLu (kanARTaka vishavxvidAyxlaya) & puTa, vacana\\
+cananxba. ka. & cananxbasavaNaNxnavara vacanagaLu\newline (kanARTaka vishavxvidAyxlaya) & puTa, vacana\\
 cananxsotxV & cananxbasaveVshavxradeVvara sotxVtarxda vacanagaLu & puTa, padayx\\
 cebapu & cenanxbasavapurANa & saMdhi, padayx\\
 diVkASxboV & diVkASxboVdhe & puTa, sAlu\\
@@ -689,7 +697,7 @@ pArake & pAramAthaRparxkAshike & puTa\\
 parxBuliV & parxBuliMgaliVle & saMdhi, padayx\\
 basaTiV & basavaNaNxnavara TiVkina vacanagaLu & BAga, puTa, vacana-TiVku\\
 basapu & basavapurANa & saMdhi, padayx\\
-basava. ka. & basavaNaNxnavara vacanagaLu (kanARTaka vishavxvidAyxlaya) & vacana, puTa\\
+basava. ka. & basavaNaNxnavara vacanagaLu\newline (kanARTaka vishavxvidAyxlaya) & vacana, puTa\\
 maDivA '' & maDivALapapxna nijaliVlAmaqta vacana & \qquad '' '' ''\\
 mishArxpaR & mishArxpaRNa & puTa, sAlu\\
 liMgaliV & liMgaliVlAvilAsa cAritarx & puTa, sAlu\\
@@ -698,7 +706,7 @@ viveVka & viveVka ciMtAmaNi & puTa\\
 viVsheYpu & viVrasheYvAmaqtapurANaM & kAMDa, saMdhi, padayx\\
 shivAkoV & shivAnuBava shabadxkoVsha & puTa, TipapxNi saMKeyx\\
 Sabarxva & SaTasxthXlabarxhAmxnaMda virakatxcAritarx saMpAdaneya vacanagaLu & puTa, vacana\\
-sidadhxrA. ka. & sidadhxrAmeVshavxra vacanagaLu (kanARTaka vishavxvidAyxlaya) & puTa, vacana\\
+sidadhxrA. ka. & sidadhxrAmeVshavxra vacanagaLu\newline (kanARTaka vishavxvidAyxlaya) & puTa, vacana\\
 sidedhxVva & sidedhxVshavxra vacanagaLu & puTa, vacana\\
 hirimaM & hiriya maMtarxgoVpayx & puTa, padayx\\
 anusA. & anuBavasAra & \\
@@ -760,7 +768,7 @@ hiMdasA & hiMdU dashaRnasAra & \\
 {\Large\bf viVrasheYva pAriBASika koVshadalilx udAharisuva garxMthagaLa saMkiSxpatx sUci}
 \end{center}
 
-{\renewcommand{\arraystretch}{1.05}
+{\renewcommand{\arraystretch}{1.06}
 \tabcolsep=3pt
 \begin{longtable}{rllll}
 \hline
