some corrections are complete

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -544,7 +544,7 @@ guheVshavxraliMgavu sadA sananxhitanu (savasaM. 2;\break alalxma. 188-60-61).
 \src{va}
 \meaning{\arthanonum{jeYnara parxkAra, iMdirxyagaLa saMKeyxya \hbox{AdhArada} meVle
  pArxNigaLanunx vagiRVkarisalAgidudx, vacanakArarU A tatatxvXvanunx
- opipxkoMDaMte kANutatxde. I AdArada parxkAra, pArxNi\-gaLanunx hiVge
+ opipxkoMDaMte kANutatxde. adara parxkAra, pArxNi\-gaLanunx hiVge
  vagiRVkarisalAgide:}}
 \vskip 4pt
 \newmeaning{\artha{oMdeV iMdirxyavanunxLaLx pArxNigaLu : EkANu jiVvigaLige keVvala sapxshaRneVMdirxyavoMdeV idudx, uLida iMdirxya\-gaLu iruvudilalx.}}
