--- a/tex-for-print/jss-001-281.tex
+++ b/tex-for-print/jss-001-281.tex
@@ -16012,7 +16012,7 @@ nivaqtitxH sAyxtf kirxyAshakitxriti payARyasaMgatiH |\\
 \begin{entry}
 \word{kale}\label{kale}
 %\src{kA}
-\meaning{\artha{parxpaMcada saqSiTxge kAraNavAda nAda, biMdu, kale - eMba mUru tatatxvXgaLalilx kaDeyadu; shUnayxdalilx modalu nAda, anaMtara A nAdada calaneyiMda biMdu udayavAgutatxde. iveraDu parxkaTagoMDa kUDaleV utapxtitxyAguva `kale' eMbudariMda mUlapadAthaRgaLa rUpa, guNa muMtAduvu kaMDubaruvuvu. jagatitxna sakala vAyxpArakUkx nAda, biMdu, kalegaLeV kAraNa. kaleyalilx shAMtayxtiVta, shAMti, vidAyx, parxtiSAThx matutx nivaqtitx eMba aidu parxkAragaLive. ivu\-gaLoMdige mahAliMgadalilx shUnayxsithxtiyalilxruva shAMtayx\-tiVtoVtatxra eMba Araneya parxkAravU ide. ivalalxde anAdi, nimARya, anivARcayx eMba kalegaLU uMTu. parxpaMcada daqshayxpadAthaRgaLanunx uMTumADuva parA, Adi, icACx, jAcnxna, kirxyA eMba paMcashakitxgaLu paMcakalegaLiMda udayavAgutatxve (viV.pA.koV. 120):}
+\meaning{\artha{parxpaMcada saqSiTxge kAraNavAda nAda, biMdu, kale - eMba mUru tatatxvXgaLalilx kaDeyadu; shUnayxdalilx modalu nAda, anaMtara A nAdada calaneyiMda biMdu udayavAgutatxde. iveraDu parxkaTagoMDa kUDaleV utapxtitxyAguva `kale' eMbudariMda mUlapadAthaRgaLa rUpa, guNa muMtAduvu kaMDubaruvuvu. jagatitxna sakala vAyxpArakUkx nAda, biMdu, kalegaLeV kAraNa. kaleyalilx shAMtayxtiVta, shAMti, vidAyx, parxtiSAThx matutx nivaqtitx eMba aidu parxkAragaLive. ivu\-gaLoMdige mahAliMgadalilx shUnayxsithxtiyalilxruva shAMtayx\-tiVtoVtatxra eMba Araneya parxkAravU ide. ivalalxde anAdi, nimARya, anivARcayx eMba kalegaLU uMTu. parxpaMcada daqshayxpadAthaRgaLanunx uMTumADuva parA, Adi, icACx, jAcnxna, kirxyA eMba paMcashakitxgaLu paMcakalegaLiMda udayavAgutatxve:}
 \ullekha{nivaqtitxkale parxtiSAThxkale vidAyx\-kale shAMtikale shAMtayxtiVtakale shAMtayxtiVtoVtatxrakale anAdiyeMba kale, nirupamakale, nivARcayxkale I kalegaLu (samava. 3; cenanxba. 1298-443); hadinA\char'273\char'304 kaLeya parxBeya musukida nAda\-vanunx nAdadi biMdukaLeyanoMdumADi ninAdaBASayxviDiduparxshiKA (hirimaM. 687-17); toLapa liMgasathxlavanAsharxyisidA {shakitx} kaLeyenisikoMDudu (shivaciM. 48-12).}}
 \smallskip
 \newmeaning{\arthanonum{\SEE{kalA}}}
@@ -16035,11 +16035,11 @@ nivaqtitxH sAyxtf kirxyAshakitxriti payARyasaMgatiH |\\
 \newmeaning{\arthanonum{\qquad shivaliMga athavA adara parxkAshavAda aGoVramuKa (mUtiRsAdAKayx)vanunx aMtashacxkuSxviniMda noVDabeVkenunxva sAdhakanu vidAyxkaleyanunx olisikoLuLxva parxyatanx mADutAtxne. vidAyxkaleyanunx sAdhisidavanu rudArxkiSx, viBUti matutx liMgavanunx dharisutAtxnalalxde beVrAva AlaMkArikavasutxgaLanUnx dharisuvudilalx, shivaliMgavanunx noVDutAtxnalalxde yAva moVhaka vasutxvanUnx noVDuvudilalx; parxsAdavananxlalxde EnanUnx tinunxvudilalx. EkeMdare, avanige guruviniMda videyx yAvudu avideyx yAvudu eMbudara BeVda tiLidide.}}
 \vskip 4pt
 \newmeaning{\arthanonum{\qquad jaMgamaliMga athavA adara parxkAshavAda tatupxruSamuKa (athavA amUtiRsAdAKayx)vanunx sAkASxtakxrisikoLaLx\-beVkenunxva sAdhakanu shAMtakaleyanunx avalaMbisabeVkAgutatxde. idariMdAgi avanige pArxNa, samAna, udAna, apAna, vAyxna eMba aidu vAyugaLanunx niyaMtirxsalu sAdhayxvAgutatxde, hAgU Ata parashivanaMte satutx, citutx, AnaMda, nitayx matutx paripUNaRnAgutAtxne.}}
-\vskip 4pt
+\vskip 6pt
 \newmeaning{\arthanonum{\qquad shAMtayxtiVtakaleya sahAyadiMda sAdhakanu manasusx, citatx, budidhx matutx ahaMkAragaLanunx niyaMtirxsi, adhAyxtamxdalilx matatxSuTx parxgati sAdhisutAtxne. Aga avana manasusx yAvAgalU liMgavanenxV manana mADutitxrutatxde; avana budidhxyu yAvAgalU sacAcxritarxvanenxV anusarisutatxde; avana citatxvu dAsoVha\-vanunx mADalu nidhaRrisutatxde matutx avanu nirahaMkAri\-yAgutAtxne.}}
-\vskip 4pt
-\newmeaning{\arthanonum{\qquad ililx nivaqtitxkalege A hesareVke eMdu nAvu parxshinxsabahudu. adakekx kAraNaviSeTx. moVkASxthiRyAdavanu nivaqtitxmAgaRvanunx anusarisadeyeV tananx guriyanunx sAdhisalAra. nivaqtitxkaleyu sAdhakananunx nivaqtitxparananAnxgi mADutatxde. parxtiSAThxkaleyu A nivaqtitxyanunx matatxSuTx parxbalagoLisutatxde; vidAyxkaleyu AdhAyxtimxka jAcnxnavanunx huTiTxsutatxde; shAMtikaleyu iMdirxya\-gaLanunx shAMtavAgiDutatxde hAgU shAMtayxtiVtakaleyu aMtaHkaraNagaLanunx shAMtavAgiDutatxde. hiVge noVDidAga elalx kalegaLU nivaqtitxkalegaLeV eMbudu KacitavAgutatxde (va.pa.koV. 114-116).}}
-\vskip 5pt
+\vskip 6pt
+\newmeaning{\arthanonum{\qquad ililx nivaqtitxkalege A hesareVke eMdu nAvu parxshinxsabahudu. adakekx kAraNaviSeTx. moVkASxthiRyAdavanu nivaqtitxmAgaRvanunx anusarisadeyeV tananx guriyanunx sAdhisalAra. nivaqtitxkaleyu sAdhakananunx nivaqtitxparananAnxgi mADutatxde. parxtiSAThxkaleyu A nivaqtitxyanunx matatxSuTx parxbalagoLisutatxde; vidAyxkaleyu AdhAyxtimxka jAcnxnavanunx huTiTxsutatxde; shAMtikaleyu iMdirxya\-gaLanunx shAMtavAgiDutatxde hAgU shAMtayxtiVtakaleyu aMtaHkaraNagaLanunx shAMtavAgiDutatxde. hiVge noVDidAga elalx kalegaLU nivaqtitxkalegaLeV eMbudu KacitavAgutatxde.}}
+\vskip 7pt
 \newmeaning{\artha{{\large kalegaLu - shakitxgaLu:} vividha vacanagaLa parishiVlaneyiMda kalegaLu matutx shakitxgaLu
  BinanxvoV alalxvoV eMba parxshenx ELutatxde. toVMTada sidadhxliMgeVshavxraru tamamx vacana\-voMdaralilx ``kale'' matutx  ``shakitx'' oMdeV vasutxvina eraDu hesaru\-gaLenunxtAtxre:}
 \ullekha{``shAMtayxtiVtoVtatxreyeMba kalApariyAya\-vanunxLaLx cicaCxkitx, shAMtayxtiVteyeMba kalApariyAyavanunxLaLx \hbox{parA\-shakitx}, shAMtiyeMba kalApariyAyavanunxLaLx Adishakitx, vidAyx\-kalApariyAyavanunxLaLx icACxshakitx, parxtiSAThxkalApariyAya\-vanunxLaLx kirxyAshakitx nivaqtitx, kalApariyAyavanunxLaLx jAcnxnashakitx. hiVge oMdeV shivashakitx Aru teranAgi SaTfparxkAravahaMthA liMgakekx aMga\-rUpavAgitutx'' (savasaM. 11; toVMTasi 36-20).} 
@@ -16050,17 +16050,21 @@ nivaqtitxH sAyxtf kirxyAshakitxriti payARyasaMgatiH |\\
 \newmeaning{\arthanonum{\qquad vAsatxvavAgi, kalegaLu shakitxgaLiMda Binanxvalalx. I vAdakekx eraDu AdhAragaLanunx koDabahudu: (1) mUvatAtxru tatatxvXgaLa bagegx heVLuvAga yAva vacanakAranU kalegaLanunx parxsAtxpisuvudilalx. shakitxgaLeYdu, kalegaLeYdu eMdu heVLidare Aga tatatxvXgaLa saMKeyx mUvatAtxrakikxMta hecAcxgutatxde. (2) parxtiyoMdu vasutxvU shakitxya rUpaveMdU, A shakitxyu shivana aMgaveMdU (BAga athavA deVha) heVLuvAga, uLida EneV idadxrU adu shakitxya rUpeV AgirabeVkAgutatxde. alalxde, }
 \ullekha{``hiVge oMdeV shakitx Aru teranAgi SaTfparxkAravahaMthA liMgakekx rUpAyitutx''}
 \arthanonum{eMbalilx liMgakekx kaleyeV aMgaveMdU, kale shakitxya inonxMdu hesareMdU heVLutatxde.}}
-\vskip 4pt
-\newmeaning{\arthanonum{\qquad inonxMdu athaRdalilx shakitx matutx kalegaLu keVvala hesaru\-gaLaSeTxV alalx, savxrUpadalilxyU Binanx eMbudanunx toVrisabahudu. kalegaLeMdare nivaqtitxkalA, vidAyxkalA (itAyxdi) eMdu athaR mADuvudAdare kalegaLu nivaqtitxshakitxgaLeMdU, shakitxgaLu parxvaqtitxshakitxgaLeMdU heVLabahudu athavA kalegaLu  \hbox{parashivana} shakitxya shudadhxrUpagaLu, shakitxgaLu adeV shakitxya ashudadhx rUpagaLu. Aga nivaqtatxkale, parxtiSAThxkale muMtAda kalegaLu shakitxya beVre rUpagaLU hwdu, beVre hesarugaLU hwdu (va.pa.koV. 116-117).}}
+\vskip 7pt
+\newmeaning{\arthanonum{\qquad inonxMdu athaRdalilx shakitx matutx kalegaLu keVvala hesaru\-gaLaSeTxV alalx, savxrUpadalilxyU Binanx eMbudanunx toVrisabahudu. kalegaLeMdare nivaqtitxkalA, vidAyxkalA (itAyxdi) eMdu athaR mADuvudAdare kalegaLu nivaqtitxshakitxgaLeMdU, shakitxgaLu parxvaqtitxshakitxgaLeMdU heVLabahudu athavA kalegaLu  \hbox{parashivana} shakitxya shudadhxrUpagaLu, shakitxgaLu adeV shakitxya ashudadhx rUpagaLu. Aga nivaqtatxkale, parxtiSAThxkale muMtAda kalegaLu shakitxya beVre rUpagaLU hwdu, beVre hesarugaLU hwdu.}}
 \end{entry}
+
+\vskip 4pt
 
 \begin{entry}
 \word{kavacamaMtarx}\label{kavacamaMtarx}
 \meaning{\arthanonum{rakASxmaMtarx: Aru bageya nAyxsAkaSxramaMtarxgaLalilx oMdu; `herxYM' eMba biVjAkaSxra:}
 \ullekha{baLikakxM, SaDaMgamaMtarxnAyxsamaM peVLevxneMtene - adhaH\-paTiTxkeyalilx hArxM eMba haqdayamaMtarxmaM, adhaHkaMjadalilx hirxVM eMba shiroVmaMtarxmaM, kaMThadalilx hUrxM eMba shiKAmaMtarxmaM, UdhavxRkaMjadalilx herxYM eMba kavacamaMtarxmaM, UdhavxRpaTiTxke\-yalilx hwrxM eMba {neVtarxmaMtarxmaM}, AjayxparxdhArikeyalilx harxH eMba asatxrXmaMtarxmaM, liMgadalilx nAyxsaMgeyuvxdeMdu niravisideyayAyx, parashivaliMgayayx (savasaM. 11; imamxDi. 1391-646); A parxNavada kuMDalA\-kAradalilx kavacamaMtarx utapxtayx (savasaM. 13; bAlasaM. 913-398); OM herxYM kavacAya BaM - idu kavaca\-maMtarxveMdu heVLalapxDutatxde (shivAkoV. 114-256).}}
-\vskip 5pt
+\vskip 7pt
 \newmeaning{\ni{kavacasayx maMtarxH - kavacamaMtarxH}}
 \end{entry}
+
+\vskip 4pt
 
 \begin{entry}
 \word{kaLavunirasanasathxla}\label{kaLavunirasanasathxla}
@@ -16068,6 +16072,8 @@ nivaqtitxH sAyxtf kirxyAshakitxriti payARyasaMgatiH |\\
 \meaning{\arthanonum{aMgasathxlagaLalilx oMdu; anayxsitxrXV\-vayxsanavanunx tayxjisabeVkeMbudanunx nirUpisuva sathxla:}
 \ullekha{kaLavu\-nirasanasathxla ...paradAramaM biTuTx liMgasAhitayxvAdeneMbavaMge kaLavu {shwcamaM} keDisuvudeMbudana\char'273\char'236du inunx kaLava shivaBakatxru biDabeVkeMbudaM nuDida vacanaMgaLu (gaNaBA. 165-1).}}
 \end{entry}
+
+\vskip 4pt
 
 \begin{entry}
 \word{kaLasha}\label{kaLasha}
@@ -16078,6 +16084,8 @@ nivaqtitxH sAyxtf kirxyAshakitxriti payARyasaMgatiH |\\
 \newmeaning{\ni{keVna = jaleVna lashati iti - kalashaH}}
 \end{entry}
 
+\vskip 2pt
+
 \begin{entry}
 \word{kaLashapaMcaka}\label{kaLashapaMcaka}
 \src{kA}
@@ -16085,9 +16093,11 @@ nivaqtitxH sAyxtf kirxyAshakitxriti payARyasaMgatiH |\\
 \ullekha{nAlavxrAcAyaR\-roDanA kalashapaMcakavanu haruSadiM mUrusULA sidadhx\-rAmaru shiraketitxyaBiSeVcanaMgeyudx (cebapu.~59-17); baMdanA sakalagaNavaqMdasaMdaNigaLoLu ...kaLashapaMcakadoLage naLanaLipa taLirugaLu paLavaLige meVlakxTuTx hoLeva BasitaMgaLoLu (diVkASxboV. 58-15).}}
 \vskip 5pt
 \newmeaning{\ni{kalashAnAM paMcakaM - kalashapaMcakaM}}
-\vskip -2pt
+\vskip 5pt
 \newmeaning{\arthanonum{\SEE{kaLashapaMcaka}}}
 \end{entry}
+
+\vskip 2pt
 
 %\begin{entry}
 %\wword{kaLashapaMcaka}\label{kaLashapaMcaka}
@@ -23551,7 +23561,7 @@ layaM gacaCxti yaterxYva jagadeVtacacxrAcaramf |
 
 \begin{entry}
 \word{carAcaralayasathxla}\label{carAcaralayasathxla}
-\src{va}
+%\src{va}
 \meaning{\arthanonum{aikayxsathxlada oMbatutx vidha liMgasathxla\-gaLalilx oMdu avAMtarasathxla; carAcarAtamxkavAda parxpaMca\-doMdige, mahAliMgadoMdige tAdAtamxyXvanunx hoMdida shivayoVgiyu nideRVhiyAgi, carAcaravinAshakanenisutAtxne. aMtaha shivayoVgige
 saMbaMdhisida sathxla:}}
 \medskip
@@ -28508,8 +28518,8 @@ jiVvanumxkitxBaRveVtf sadayxH cidAnaMdaparxkAshiniV ||
 
 \begin{entry}
 \word{jiVvashUnayx}\label{jiVvashUnayx}
-\meaning{\arthanonum{jiVvAtamxnu tAnu parashivaniMda parxteyxVka\-veMdu tiLiyade,
- parashivanu tananx oLahoraganenxlalx parxveVshisidAdxne eMba
+\src{va}
+\meaning{\arthanonum{jiVvAtamxnu tAnu parashivaniMda parxteyxVka\-veMdu tiLiyade, parashivanu tananx oLahoraganenxlalx parxveVshisidAdxne eMba
  rahasayx (BeVda)vanunx tiLidare Aga avanu jiVvanAgidadxrU tananx
  jiVvatavxvanunx kaLedukoMDirutAtxne. ideV jiVvashUnayx, jiVvanumxkatx sithxti:}
 \ullekha{kAyashUnayx, jiVvashUnayx, pArxNa shUnayxveMdeMbaru, adeMtayayx ? (savasaM. 8; meremiM. 1322-457).}}
