--- a/tex-for-print/jss-282-501.tex
+++ b/tex-for-print/jss-282-501.tex
@@ -3881,7 +3881,7 @@ madhAyxMguliVBirAdAya tisaqBimURlamaMtirxtamf |\\[-2pt]
 
 \begin{entry}
 \word{tirxvidhaBakatx}\label{tirxvidhaBakatx}
-\src{koV}
+%\src{koV}
 \meaning{\arthanonum{guru, liMga, jaMgamakekx tanukirxye, manaH\-kirxye, dhanakirxyegaLiMda tamamx tanu, mana, dhanagaLanunx\break apiRsuva guruBakatx, liMgaBakatx matutx jaMgamaBakatx eMba mUru\-vidhada Bakatxru:}
 \ullekha{guruBakotxV liMgaBakatxshacxraBakatxsatxtheYva ca | EvaM BeVdasamAyukatxH sa BakatxH tirxvidhoV BaveVtf | (sU. A., kirx. pA., 8. 36; kirx. sA., BA-3, pu. 122; shi. ta. ra., 9. 9. 39.); tirxvidhaBakatx - ivu guruBakatx, liMgaBakatx, jaMgamaBakatx eMdirutatxve (shivAkoV. 41-63).}}
 \vskip 5pt
@@ -5147,6 +5147,7 @@ taqNAdikaM parigArxhayxM taqNashudidhxritiVritA ||
 
 \begin{entry}
 \word{taqpatxtAvxnuBAvaparxkAsha}\label{taqpatxtAvxnuBAvaparxkAsha}
+\src{va}
 \meaning{\arthanonum{aikayxsathxlada anuBAviyu cinamxya\-parxkAshadalilx oMdAdAga, mahAliMga hAgU tAnu aikayxreMba adevxYtaBAva mUDuvudalalxde, avanige aparimita taqpitxyAgutatxde:}
 \ullekha{taqpatxtAvxnuBAvaparxkAshadoLumxLugi mahA\-liMgeYkayxneMba nAmavanuDugi guruniraMjana cananxbasavaliMgA nimomxLage nijeYkayxnAdenu kANA (savasaM. 12; deVshikeVM. 904-261).}}
 \vskip 5pt
@@ -11147,7 +11148,7 @@ taciCxKAyAM shUnayxliMgaM saMjAtaM vishavxkAraNamf ||\\[-1pt]
 \begin{entry}
 \word{niraMjanaparxNava}\label{niraMjanaparxNava}
 \src{va}
-\meaning{\arthanonum{= niraMjanaparxNama:} \ullekha{nAmarUpu kirxVgaLeVnuyeVnU ilalxda nitayxniraMjana paravasutx tAne niraMjanaparxNava noVDa (savasaM. 11; toVMTasi. 198-94); A EkadaLadalilx savaRraMjaneyanoLakoMDu vAcAtiVtavenisuva niraMjanaparxNava (savasaM. 14; SaNumxKa. 787-364); EnU EnU enalilalxdaMdu mahAGana niraMjanAtiVtavAgiha vasutx loVkAdi loVkaMgaLa saqjisabeVkeMdu nenahu mAtarxdalilxyeV niraMjana parxNava utapxtayxvAyitutx (savasaM. 13. bAlasaM. 898-392).}}
+\meaning{\arthanonum{= niraMjanaparxNama:} \ullekha{nAmarUpu kirxVgaLeVnuyeVnU ilalxda nitayxniraMjana paravasutx tAne niraMjanaparxNava noVDa (savasaM. 11; toVMTasi. 198-94); EnU EnU enalilalxdaMdu mahAGana niraMjanAtiVtavAgiha vasutx loVkAdi loVkaMgaLa saqjisabeVkeMdu nenahu mAtarxdalilxyeV niraMjana parxNava utapxtayxvAyitutx (savasaM. 13. bAlasaM. 898-392); A EkadaLadalilx savaRraMjaneyanoLakoMDu vAcAtiVtavenisuva niraMjanaparxNava (savasaM. 14; SaNumxKa. 787-364).}}
 \vskip 5pt
 \newmeaning{\ni{niraMjanashacx asw parxNa\-vashacx - niraMjanaparxNavaH}}
 \end{entry}
@@ -11201,7 +11202,7 @@ taciCxKAyAM shUnayxliMgaM saMjAtaM vishavxkAraNamf ||\\[-1pt]
 \word{niraMjanAtiVtaSaTasxthXla}\label{niraMjanAtiVtaSaTasxthXla}
 \src{koV}
 \meaning{\arthanonum{shUnayxsathxladalilxruva nirAmaya\-SaTasxthXla, niraMjanaSaTasxthXla matutx niraMjanAtiVta\-SaTasxthXla eMba mUru sathxlagaLalilx oMdu:}
-\ullekha{yAva SaTasxthXlavu meVle heVLida niraMjanakakxtiVtavAgirutatxdeyoV adeV niraMjanAtiVta\-SaTasxthXlaveMdu heVLalapxDutatxde (shivAkoV. 857-93).}}
+\ullekha{yAva SaTasxthX\-lavu meVle heVLida niraMjanakakxtiVtavAgirutatxdeyoV adeV niraMjanAtiVta\-SaTasxthXlaveMdu heVLalapxDutatxde (shivAkoV. 857-93).}}
 \vskip 5pt
 \newmeaning{\ni{niraMjanaM atiVtaM yatf SaTfsathxlaM, tatf - niraMjanA\-tiVtaSaTasxthXlaM}}
 \end{entry}
@@ -22586,7 +22587,7 @@ puruSatatatxvXrUpa BUtaH
 \begin{entry}
 \word{badadhxka}\label{badadhxka}
 \src{va}
-\meaning{\arthanonum{baMdhanakekx silukidavanu:} A jaMgama heNaNx beVDidare saMsAri eMdu, honanx beVDidare ashakaneMdu, maNuNx beVDidare badadhxkaneMdu iSaTxkekx noMda matetx BakitxvAsige hoVrabeVke (savasaM. 4; moVLimA. 53-204).}
+\meaning{\arthanonum{baMdhanakekx silukidavanu:} A jaMgama heNaNx beVDidare saMsAri eMdu, honanx beVDidare ashakaneMdu, maNuNx beVDidare badadhxkaneMdu iSaTxkekx noMda matetx BakitxvAsige hoVrabeVke (savasaM. 8; moVLimA. 53-204).}
 \end{entry}
 
 \begin{entry}
