--- a/tex-for-print/ya-La.tex
+++ b/tex-for-print/ya-La.tex
@@ -14005,7 +14005,7 @@ savARMgoVdUdhxlanaM ceYva SaDeVteV sheYvalAMCanAH ||\\[-1pt]
 
 \begin{entry}
 \word{sheYvavidha}\label{sheYvavidha}
-\src{koV}
+%\src{koV}
 \meaning{\arthanonum{sheYvamatadalilxruva parxBeVdagaLu:} \artha{sheYva, viVrasheYva eMdu eraDu vidha:}}
 \medskip
 \begin{shl}
